--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,17 @@ body {
   font-size: 20px;
   font-weight: 700;
 }
+
+/* For Webkit (Chrome, Safari, etc.) */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color);
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: white;
+}
