--- a/src/components/pages/Test/TestForm/Select/Options/option.css
+++ b/src/components/pages/Test/TestForm/Select/Options/option.css
@@ -1,18 +1,19 @@
-/* Add this CSS in your stylesheet or inside your component */
+/* For Firefox */
 .options-scrollbar {
-  scrollbar-width: 6px; /* For Firefox */
-  scrollbar-color: rgba(131, 53, 134, 0.2); /* For Firefox */
+  scrollbar-width: 6px;
+  scrollbar-color: hsl(184, 54%, 52%, 0.3);
+}
 
-  &::-webkit-scrollbar {
-    width: 6px; /* You can adjust the width */
-  }
+/* For Webkit (Chrome, Safari, etc.) */
+.options-scrollbar::-webkit-scrollbar {
+  width: 6px;
+}
 
-  &::-webkit-scrollbar-thumb {
-    background-color: rgba(131, 53, 134, 0.2); /* Thumb color */
-    border-radius: 20px;
-  }
+.options-scrollbar::-webkit-scrollbar-thumb {
+  background-color: hsl(184, 54%, 52%, 0.3);
+  border-radius: 20px;
+}
 
-  &::-webkit-scrollbar-track {
-    background-color: white; /* Track color */
-  }
+.options-scrollbar::-webkit-scrollbar-track {
+  background-color: white;
 }
