--- a/src/components/reuseable/Sidebar/Sidebar.css
+++ b/src/components/reuseable/Sidebar/Sidebar.css
@@ -1,18 +1,19 @@
-/* Add this CSS in your stylesheet or inside your component */
+/* For Firefox */
 .sidebar-scrollbar {
-  scrollbar-width: 8x; /* For Firefox */
-  scrollbar-color: var(--primary-color); /* For Firefox */
+  scrollbar-width: 8px;
+  scrollbar-color: var(--primary-color);
+}
 
-  &::-webkit-scrollbar {
-    width: 8px; /* You can adjust the width */
-  }
+/* For Webkit (Chrome, Safari, etc.) */
+.sidebar-scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
 
-  &::-webkit-scrollbar-thumb {
-    background-color: var(--primary-color); /* Thumb color */
-    border-radius: 20px;
-  }
+.sidebar-scrollbar::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color);
+  border-radius: 20px;
+}
 
-  &::-webkit-scrollbar-track {
-    background-color: white; /* Track color */
-  }
+.sidebar-scrollbar::-webkit-scrollbar-track {
+  background-color: white;
 }
