--- a/src/App.css
+++ b/src/App.css
@@ -54,8 +54,13 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--primary-color);
+  background-color: hsl(184, 54%, 52%, 0.6);
   border-radius: 20px;
+  transition: background-color 0.3s ease;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(184, 54%, 52%, 1);
 }
 
 ::-webkit-scrollbar-track {
