--- a/src/components/pages/Test/TestForm/Select/Options/option.css
+++ b/src/components/pages/Test/TestForm/Select/Options/option.css
@@ -12,6 +12,11 @@
 .options-scrollbar::-webkit-scrollbar-thumb {
   background-color: hsl(184, 54%, 52%, 0.3);
   border-radius: 20px;
+  transition: background-color 0.3s ease;
+}
+
+.options-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(184, 54%, 52%, 0.8); /* Change color on hover */
 }
 
 .options-scrollbar::-webkit-scrollbar-track {
