--- a/src/components/reuseable/Sidebar/Sidebar.css
+++ b/src/components/reuseable/Sidebar/Sidebar.css
@@ -10,8 +10,9 @@
 }
 
 .sidebar-scrollbar::-webkit-scrollbar-thumb {
-  background-color: var(--primary-color);
+  background-color: hsl(184, 54%, 52%, 0.6);
   border-radius: 20px;
+  transition: background-color 0.3s ease;
 }
 
 .sidebar-scrollbar::-webkit-scrollbar-track {
