--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400&display=swap");
 
 *,
 *:after,
@@ -16,7 +16,7 @@
   --text-color: #637381;
   --white-color: #fff;
   --black-color: #000;
-  --primary-font: 'Rubik', sans-serif;
+  --primary-font: "Rubik", sans-serif;
 }
 
 html {
