--- a/src/App.css
+++ b/src/App.css
@@ -31,9 +31,17 @@ body {
   background-color: var(--background-color) !important;
 }
 
-.section-card {
+/* .section-card {
   background-color: #ffffff;
   box-shadow: 0px 0px 15px 0px #0000000a;
+  border-radius: 5px;
+  padding: 20px;
+} */
+
+.section-card {
+  background-color: #ffffff;
+  /* box-shadow: 0px 0px 15px 0px #0000000a; */
+  border: 1px solid #dce0e4;
   border-radius: 5px;
   padding: 20px;
 }
