--- a/src/App.css
+++ b/src/App.css
@@ -103,3 +103,33 @@ body {
   background-color: hsl(184, 54%, 52%, 0.8);
   color: #fff;
 }
+
+/*animations */
+.backdrop-fade-in {
+  animation: backdrop-fade-in 200ms linear forwards;
+}
+
+.backdrop-fade-out {
+  animation: backdrop-fade-out 200ms linear forwards;
+}
+
+/* Keyframes for fade-in animation */
+@keyframes backdrop-fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* Keyframes for fade-out animation */
+@keyframes backdrop-fade-out {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    display: none;
+  }
+}
